plugins {
    id 'java'
    id 'java-library'
    id 'io.freefair.lombok' version '8.10'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'me.goodt'
version = '3.0.0-SNAPSHOT'

archivesBaseName = 'vkpht-main'

java {
    modularity.inferModulePath = true
}

repositories {
    maven {
        url 'https://vkpht-nexus.goodt.me/repository/maven-public/'
        credentials {
            username 'maven_read'
            password '+XDBmyl|dJ|Ku-#]8#'
        }
    }
    mavenLocal()
}

ext {
    springBootVersion = '3.3.4'
    postgreJDBCDriverVersion = '42.7.4'
    queryDslVersion = '6.8'
    springDocVersion = '1.8.0'
    mapstructVersion = '1.6.3'
    authSurCoreVersion = '1.0.57'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'io.freefair.lombok'

    sourceCompatibility = '21'
    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }



    repositories {
        maven {
            url 'https://vkpht-nexus.goodt.me/repository/maven-public/'
            credentials {
                username 'maven_read'
                password '+XDBmyl|dJ|Ku-#]8#'
            }
        }
        mavenLocal()
    }

    dependencies {
        implementation "me.goodt:auth-sur-core:3.0.0-SNAPSHOT"
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-webmvc'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-hateoas'
        implementation "org.springdoc:springdoc-openapi-ui:${springDocVersion}"
        implementation "org.springdoc:springdoc-openapi-webmvc-core:${springDocVersion}"
        implementation 'org.liquibase:liquibase-core'
        implementation "org.postgresql:postgresql:$postgreJDBCDriverVersion"
    }

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:$springBootVersion")
        }
    }

}